src/test/deca/context/invalid/created/binary_exp/op_arith/plus_null_a.deca
// Description :
//    test plus entre un null et un a
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.33) L’opérande gauche est de type null, L’opérande droite est de type a. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur +
class A{}
{
A a = new A();
int c = null + a;
}
